[tool.poetry]
name = "slippage-estimator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "slippage_estimator"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
web3 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
